--- a/handheld/pandora_classic_fix_battery.htm
+++ b/handheld/pandora_classic_fix_battery.htm
@@ -1,43 +1,9 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-  <link rel="shortcut icon" href="../website.ico">
-  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
-  <script type="text/javascript" src="../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
-</head>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../header.js"></script>
-<div id="page">
 <h3><a href="../index.htm">掌機</a> - Pandora (Classic) - <b>解決電池(Out of Temperature)問題</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 電池無法充電的情況(Out of temperature)竟然也可以被司徒遇見，充電器一插上後，過1分鐘就自動斷電，這樣等於無法充電，因此，花了一些時間找尋問題，順便紀錄一下，將來或許還用得到<br>
 <img src="pandora_classic_fix_battery/1.jpg" class="maxSize"><br><br>
@@ -94,9 +60,5 @@ PCB<br>
 可以充電<br>
 <img src="pandora_classic_fix_battery/19.jpg" class="maxSize">
 </p>
-<br>
-</div>
-</div>
-</div>
-</body>
-</html>
+
+<br><script type="text/javascript" src="../tail.js"></script>
