--- a/handheld/pandora_rebirth_mark3_keycode.htm
+++ b/handheld/pandora_rebirth_mark3_keycode.htm
@@ -1,103 +1,65 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-  <link rel="shortcut icon" href="../website.ico">
-  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
-  <script type="text/javascript" src="../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
-</head>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../header.js"></script>
-<div id="page">
 <h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - Debian (Mark3) - <b>Keycode</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <table>
-<tr><th>Key</th><th>Code</th><th>Code(Fn)</th></tr>
-<tr><td>L1</td><td>62</td><td>62</td></tr>
-<tr><td>R1</td><td>105</td><td>105</td></tr>
-<tr><td>1</td><td>10</td><td>67</td></tr>
-<tr><td>2</td><td>11</td><td>68</td></tr>
-<tr><td>3</td><td>12</td><td>69</td></tr>
-<tr><td>4</td><td>13</td><td>70</td></tr>
-<tr><td>5</td><td>14</td><td>71</td></tr>
-<tr><td>6</td><td>15</td><td>72</td></tr>
-<tr><td>7</td><td>16</td><td>73</td></tr>
-<tr><td>8</td><td>17</td><td>74</td></tr>
-<tr><td>9</td><td>18</td><td>75</td></tr>
-<tr><td>0</td><td>19</td><td>76</td></tr>
-<tr><td>Backspace</td><td>22</td><td>118</td></tr>
-<tr><td>D_Up</td><td>111</td><td>111</td></tr>
-<tr><td>D_Down</td><td>116</td><td>116</td></tr>
-<tr><td>D_Left</td><td>113</td><td>113</td></tr>
-<tr><td>D_Right</td><td>114</td><td>114</td></tr>
-<tr><td>D_Start</td><td>64</td><td>64</td></tr>
-<tr><td>D_Select</td><td>37</td><td>37</td></tr>
-<tr><td>D_A</td><td>110</td><td>110</td></tr>
-<tr><td>D_B</td><td>115</td><td>115</td></tr>
-<tr><td>D_X</td><td>117</td><td>117</td></tr>
-<tr><td>D_Y</td><td>112</td><td>112</td></tr>
-<tr><td>Q</td><td>24</td><td>9</td></tr>
-<tr><td>W</td><td>25</td><td>198</td></tr>
-<tr><td>E</td><td>26</td><td>34</td></tr>
-<tr><td>R</td><td>27</td><td>35</td></tr>
-<tr><td>T</td><td>28</td><td>195</td></tr>
-<tr><td>Y</td><td>29</td><td>193</td></tr>
-<tr><td>U</td><td>30</td><td></td></tr>
-<tr><td>I</td><td>31</td><td></td></tr>
-<tr><td>O</td><td>32</td><td>95</td></tr>
-<tr><td>P</td><td>33</td><td>96</td></tr>
-<tr><td>Shift</td><td>50</td><td>66</td></tr>
-<tr><td>A</td><td>38</td><td>48</td></tr>
-<tr><td>S</td><td>39</td><td>197</td></tr>
-<tr><td>D</td><td>40</td><td>82</td></tr>
-<tr><td>F</td><td>41</td><td>86</td></tr>
-<tr><td>G</td><td>42</td><td>21</td></tr>
-<tr><td>H</td><td>43</td><td>49</td></tr>
-<tr><td>J</td><td>44</td><td>191</td></tr>
-<tr><td>K</td><td>45</td><td>196</td></tr>
-<tr><td>L</td><td>46</td><td>132</td></tr>
-<tr><td>Enter</td><td>36</td><td>36</td></tr>
-<tr><td>,</td><td>59</td><td>47</td></tr>
-<tr><td>.</td><td>60</td><td>199</td></tr>
-<tr><td>Z</td><td>52</td><td>61</td></tr>
-<tr><td>X</td><td>53</td><td>222</td></tr>
-<tr><td>C</td><td>54</td><td>51</td></tr>
-<tr><td>V</td><td>55</td><td>194</td></tr>
-<tr><td>B</td><td>56</td><td>192</td></tr>
-<tr><td>N</td><td>57</td><td>200</td></tr>
-<tr><td>M</td><td>58</td><td>201</td></tr>
-<tr><td>Space</td><td>65</td><td>23</td></tr>
+    <tr><th>Key</th><th>Code</th><th>Code(Fn)</th></tr>
+    <tr><td>L1</td><td>62</td><td>62</td></tr>
+    <tr><td>R1</td><td>105</td><td>105</td></tr>
+    <tr><td>1</td><td>10</td><td>67</td></tr>
+    <tr><td>2</td><td>11</td><td>68</td></tr>
+    <tr><td>3</td><td>12</td><td>69</td></tr>
+    <tr><td>4</td><td>13</td><td>70</td></tr>
+    <tr><td>5</td><td>14</td><td>71</td></tr>
+    <tr><td>6</td><td>15</td><td>72</td></tr>
+    <tr><td>7</td><td>16</td><td>73</td></tr>
+    <tr><td>8</td><td>17</td><td>74</td></tr>
+    <tr><td>9</td><td>18</td><td>75</td></tr>
+    <tr><td>0</td><td>19</td><td>76</td></tr>
+    <tr><td>Backspace</td><td>22</td><td>118</td></tr>
+    <tr><td>D_Up</td><td>111</td><td>111</td></tr>
+    <tr><td>D_Down</td><td>116</td><td>116</td></tr>
+    <tr><td>D_Left</td><td>113</td><td>113</td></tr>
+    <tr><td>D_Right</td><td>114</td><td>114</td></tr>
+    <tr><td>D_Start</td><td>64</td><td>64</td></tr>
+    <tr><td>D_Select</td><td>37</td><td>37</td></tr>
+    <tr><td>D_A</td><td>110</td><td>110</td></tr>
+    <tr><td>D_B</td><td>115</td><td>115</td></tr>
+    <tr><td>D_X</td><td>117</td><td>117</td></tr>
+    <tr><td>D_Y</td><td>112</td><td>112</td></tr>
+    <tr><td>Q</td><td>24</td><td>9</td></tr>
+    <tr><td>W</td><td>25</td><td>198</td></tr>
+    <tr><td>E</td><td>26</td><td>34</td></tr>
+    <tr><td>R</td><td>27</td><td>35</td></tr>
+    <tr><td>T</td><td>28</td><td>195</td></tr>
+    <tr><td>Y</td><td>29</td><td>193</td></tr>
+    <tr><td>U</td><td>30</td><td></td></tr>
+    <tr><td>I</td><td>31</td><td></td></tr>
+    <tr><td>O</td><td>32</td><td>95</td></tr>
+    <tr><td>P</td><td>33</td><td>96</td></tr>
+    <tr><td>Shift</td><td>50</td><td>66</td></tr>
+    <tr><td>A</td><td>38</td><td>48</td></tr>
+    <tr><td>S</td><td>39</td><td>197</td></tr>
+    <tr><td>D</td><td>40</td><td>82</td></tr>
+    <tr><td>F</td><td>41</td><td>86</td></tr>
+    <tr><td>G</td><td>42</td><td>21</td></tr>
+    <tr><td>H</td><td>43</td><td>49</td></tr>
+    <tr><td>J</td><td>44</td><td>191</td></tr>
+    <tr><td>K</td><td>45</td><td>196</td></tr>
+    <tr><td>L</td><td>46</td><td>132</td></tr>
+    <tr><td>Enter</td><td>36</td><td>36</td></tr>
+    <tr><td>,</td><td>59</td><td>47</td></tr>
+    <tr><td>.</td><td>60</td><td>199</td></tr>
+    <tr><td>Z</td><td>52</td><td>61</td></tr>
+    <tr><td>X</td><td>53</td><td>222</td></tr>
+    <tr><td>C</td><td>54</td><td>51</td></tr>
+    <tr><td>V</td><td>55</td><td>194</td></tr>
+    <tr><td>B</td><td>56</td><td>192</td></tr>
+    <tr><td>N</td><td>57</td><td>200</td></tr>
+    <tr><td>M</td><td>58</td><td>201</td></tr>
+    <tr><td>Space</td><td>65</td><td>23</td></tr>
 </table>
-<br>
-</div>
-</div>
-</div>
-</body>
-</html>
+
+<br><script type="text/javascript" src="../tail.js"></script>
