--- a/handheld/pandora_rebirth_superzaxxon_usb_ssh.htm
+++ b/handheld/pandora_rebirth_superzaxxon_usb_ssh.htm
@@ -1,43 +1,9 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-  <link rel="shortcut icon" href="../website.ico">
-  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
-  <script type="text/javascript" src="../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
-</head>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../header.js"></script>
-<div id="page">
 <h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>如何透過USB Mini B登入SSH</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
 https://pyra-handheld.com/boards/threads/please-explain-usb-options.74048/<br><br>
@@ -59,9 +25,5 @@ $ sudo modprobe g_ether
 連接USB Mini B<br>
 <img src="pandora_rebirth_superzaxxon_usb_ssh/1.jpg" class="maxSize">
 </p>
-<br>
-</div>
-</div>
-</div>
-</body>
-</html>
+
+<br><script type="text/javascript" src="../tail.js"></script>
