--- a/handheld/pandora_rebirth_uart.htm
+++ b/handheld/pandora_rebirth_uart.htm
@@ -1,43 +1,9 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-  <link rel="shortcut icon" href="../website.ico">
-  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
-  <script type="text/javascript" src="../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
-</head>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../header.js"></script>
-<div id="page">
 <h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - <b>UART改造</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 雖然司徒已經製作過UART傳輸線，但是，每次都要帶那條特殊的傳輸線，還是有些不方便，因此，司徒這次打算使用排針改造，位置如下：<br>
 <img src="pandora_rebirth_uart/1.jpg" class="maxSize"><br><br>
@@ -69,9 +35,5 @@
 USB C除了可以當作COM Port使用之外，也可以幫Pandora充電，算是相當棒的改造<br>
 <img src="pandora_rebirth_uart/10.jpg" class="maxSize">
 </p>
-<br>
-</div>
-</div>
-</div>
-</body>
-</html>
+
+<br><script type="text/javascript" src="../tail.js"></script>
