--- a/phone.htm
+++ b/phone.htm
@@ -49,52 +49,52 @@ Nokia N900</h3>
 <a href="phone/n900_spec.htm">
 簡要規格</a><br>
 
-&lowast;
-<a href="phone/n900/charge_led.htm">
-充電LED</a><br>
+&dash;
+<a href="phone/n900_vol.htm">
+超頻電壓表</a><br>
 
-&lowast;
-<a href="phone/n900/mod.htm">
-終極改造</a><br>
-
-&lowast;
-<a href="phone/n900/sensor.htm">
+&dash;
+<a href="phone/n900_sensor.htm">
 感測器位置</a><br>
 
-&lowast;
-<a href="phone/n900/vol.htm">
-Voltage Table</a><br>
+&dash;
+<a href="phone/n900_charge_led.htm">
+充電LED電路</a><br>
 
-&lowast;
-<a href="phone/n900/uart.htm">
-製作UART、USB接頭</a><br>
+&dash;
+<a href="phone/n900_uart.htm">
+USB、UART改造(1)</a><br>
 
-&lowast;
-<a href="phone/n900/sixaxis.htm">
+&dash;
+<a href="phone/n900_uart2.htm">
+USB、UART改造(2)</a><br>
+
+&dash;
+<a href="phone/n900_sixaxis.htm">
 連接PS SixAxis手把</a><br>
 
-&lowast;
-<a href="phone/n900/rd.htm">
+&dash;
+<a href="phone/n900_rd.htm">
 開啟工程模式(RD Mode)</a><br>
 
-&lowast;
-<a href="phone/n900/joystick1.htm">
+&dash;
+<a href="phone/n900_joystick1.htm">
 自製遊戲手把(A320機架)</a><br>
 
-&lowast;
-<a href="phone/n900/joystick2.htm">
+&dash;
+<a href="phone/n900_joystick2.htm">
 自製遊戲手把(A380機架)</a><br>
 
-&lowast;
-<a href="phone/n900/pl2303.htm">
+&dash;
+<a href="phone/n900_pl2303.htm">
 連接USB轉UART(PL-2303)</a><br>
 
-&lowast;
-<a href="phone/n900/3150ma.htm">
+&dash;
+<a href="phone/n900_3150ma.htm">
 改造電池(3.7V 3150mA電池)</a><br>
 
-&lowast;
-<a href="phone/n900/qf9700.htm">
+&dash;
+<a href="phone/n900_qf9700.htm">
 連接USB RJ-45網卡(QF9700)</a><br>
 
 &lowast;
