--- a/phone.htm
+++ b/phone.htm
@@ -86,31 +86,31 @@ USB、UART改造(2)</a><br>
 自製遊戲手把(A380機架)</a><br>
 
 &dash;
-<a href="phone/n900_pl2303.htm">
-連接USB轉UART(PL-2303)</a><br>
+<a href="phone/n900_joystick3.htm">
+自製遊戲手把(PS SixAxis手把)</a><br>
 
 &dash;
 <a href="phone/n900_3150ma.htm">
 改造電池(3.7V 3150mA電池)</a><br>
 
 &dash;
-<a href="phone/n900_qf9700.htm">
-連接USB RJ-45網卡(QF9700)</a><br>
+<a href="phone/n900_pl2303.htm">
+連接USB UART(PL-2303)</a><br>
 
-&lowast;
-<a href="phone/n900/jet200.htm">
+&dash;
+<a href="phone/n900_qf9700.htm">
+連接USB RJ-45(QF9700)</a><br>
+
+&dash;
+<a href="phone/n900_jet200.htm">
 連接PocketJet200熱感印表機</a><br>
 
-&lowast;
-<a href="phone/n900/joystick3.htm">
-自製遊戲手把(PS SixAxis手把)</a><br>
-
-&lowast;
-<a href="phone/n900/mugen.htm">
+&dash;
+<a href="phone/n900_mugen.htm">
 Mugen Power 3.7V 2400mA電池</a><br>
 
-&lowast;
-<a href="phone/n900/lifeguard.htm">
+&dash;
+<a href="phone/n900_lifeguard.htm">
 關閉Watchdog、Life Guard Reset</a><br>
 
 &oplus;
