--- a/phone/n900_qf9700.htm
+++ b/phone/n900_qf9700.htm
@@ -2,13 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - <b>連接USB RJ-45網卡(QF9700)</b></h3>
+<h3><a href="../phone.htm">手機</a> - N900 - <b>連接USB RJ-45(QF9700)</b></h3>
 <hr size="1"><br>
 <p>
-主角登場(QF9700 USB轉RJ-45網卡)<br>
-<img src="n900_qf9700/1.jpg" class="maxSize"><br><br>
-
-背面照<br>
+QF9700<br>
+<img src="n900_qf9700/1.jpg" class="maxSize"><br>
 <img src="n900_qf9700/2.jpg" class="maxSize"><br><br>
 
 切換成USB Host模式並插入QF9700 USB轉RJ-45網卡<br>
