--- a/phone.htm
+++ b/phone.htm
@@ -116,25 +116,17 @@ Mugen Power 3.7V 2400mA電池</a><br>
 &oplus;
 <b>Maemo</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/overclock.htm">
-    超頻</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/git.htm">
-    Git操作</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/ssh.htm">
-    連接SSH</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/screenshot.htm">
-    擷取畫面</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/os_flash.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_setup.htm">
     安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_oc.htm">
+    超頻方式</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_screenshot.htm">
+    擷取畫面</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/n900/maemo/tmux.htm">
