--- a/phone/n900_maemo_screenshot.htm
+++ b/phone/n900_maemo_screenshot.htm
@@ -2,16 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - <b>關閉Watchdog、Life Guard Reset</b></h3>
+<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>擷取畫面</b></h3>
 <hr size="1"><br>
 <p>
-步驟如下：
+按下<b>Ctrl + Shift + P</b>後，畫面保存將會保存到<b>/home/user/Mydocs/.images/Screenshots/</b>
 </p>
-<pre>
-C:\&gt; flasher-3.5.exe --enable-rd-mode
-C:\&gt; flasher-3.5.exe --set-rd-flags=no-omap-wd
-C:\&gt; flasher-3.5.exe --set-rd-flags=no-retu-wd
-C:\&gt; flasher-3.5.exe --set-rd-flags=no-lifeguard-reset
-</pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
