--- a/phone.htm
+++ b/phone.htm
@@ -128,36 +128,20 @@ Mugen Power 3.7V 2400mA電池</a><br>
     <a href="phone/n900_maemo_screenshot.htm">
     擷取畫面</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/tmux.htm">
-    安裝Tmux</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_vimrc.htm">
+    客製化.vimrc</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/mafw-equalizer.htm">
-    安裝等化器</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/vimrc.htm">
-    自訂Vimrc</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/gcc-4.6.htm">
-    安裝GCC 4.6</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/keyboard.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_keyboard.htm">
     定義鍵盤組合鍵</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fdisk.htm">
-    重新格式化分區</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_xbindkeys.htm">
+    自定義Xbindkeys</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/xbindkeys.htm">
-    自訂Xbindkeys</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/repository.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_repo.htm">
     更新Repository</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
