--- a/phone/n900_maemo_setup.htm
+++ b/phone/n900_maemo_setup.htm
@@ -13,38 +13,30 @@
 5. 連接N900 USB至PC端並等待驅動程式安裝完成<br>
 <img src="n900_maemo_setup/1.jpg" class="maxSize"><br><br>
 
-6. <a href="https://github.com/steward-fu/n900/releases/download/v1.0/firmware.7z">下載相關檔案</a>並且安裝它，接著開啟已安裝的maemo flasher</a>程式(CLI介面)：開始 &gt; 程式集 &gt; Maemo flasher 3.5 &gt; Maemo flasher 3.5<br>
-
-7. 刷入Kernel(如果有安裝UBoot程式，建議先更新Kernel)
+6. https://github.com/steward-fu/website/releases/download/n900/firmware.7z<br>
+7. 開啟maemo flasher</a>程式(CLI介面)：開始 =&gt; 程式集 =&gt; Maemo flasher 3.5 =&gt; Maemo flasher 3.5<br>
+8. 刷入Kernel(如果有安裝UBoot程式，建議先更新Kernel)
 </p>
 <pre>
 C:\&gt; flasher-3.5.exe -k zImage -f -R
-</pre>
+</pre><br>
 
 <p>
-8. 刷入EMMC Image
+9. 刷入EMMC Image
 </p>
 <pre>
 C:\&gt; flasher-3.5.exe -F RX-51_2009SE_10.2010.13-2.VANILLA_PR_EMMC_MR0_ARM.bin -f -R
-</pre>
+</pre><br>
 
 <p>
-9. 刷入Combined Image
+10. 刷入Combined Image
 </p>
 <pre>
 C:\&gt; flasher-3.5.exe -F RX-51_2009SE_20.2010.36-2_PR_COMBINED_MR0_ARM.bin -f -R
 </pre>
 
 <p>
-10. 放開鍵盤U鍵並重新開機
+11. 放開鍵盤U鍵並重新開機
 </p>
 
-<p>
-<br><a href="../../../phone.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
