Retroid Pocket Flip Refined.

--- a/index.htm
+++ b/index.htm
@@ -6995,16 +6995,16 @@ SUPER MARY XY-8016</h3>
 Retroid Pocket Flip</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/retroid-flip/review.htm">
-介紹</a><br>
+&dash;
+<a href="handheld/retroid-flip_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="handheld/retroid-flip/teardown.htm">
+&dash;
+<a href="handheld/retroid-flip_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="handheld/retroid-flip/mod.htm">
+&dash;
+<a href="handheld/retroid-flip_mod.htm">
 十字鍵、仰角改造</a><br>
 <br><br><br><br>
 
