iriver Dicple D5 Refined.

--- a/umpc.htm
+++ b/umpc.htm
@@ -135,28 +135,28 @@
 iriver Dicple D5</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="umpc/d5/review.htm">
-介紹</a><br>
+&dash;
+<a href="umpc/d5_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="umpc/d5/teardown.htm">
+&dash;
+<a href="umpc/d5_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="umpc/d5/jtag.htm">
+&dash;
+<a href="umpc/d5_jtag.htm">
 焊接JTAG腳位</a><br>
 
-&lowast;
-<a href="umpc/d5/dump.htm">
+&dash;
+<a href="umpc/d5_dump.htm">
 如何透過JTAG Dump</a><br>
 
-&lowast;
-<a href="umpc/d5/ida_pro.htm">
+&dash;
+<a href="umpc/d5_ida_pro.htm">
 如何使用IDA Pro Debug</a><br>
 
-&lowast;
-<a href="umpc/d5/mmap.htm">
+&dash;
+<a href="umpc/d5_mmap.htm">
 Memory Map</a><br>
 <br><br><br><br>
 
