iriver Dicple D7 Refined.

--- a/umpc.htm
+++ b/umpc.htm
@@ -165,12 +165,12 @@ Memory Map</a><br>
 iriver Dicple D7</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="umpc/d7/review.htm">
-介紹</a><br>
+&dash;
+<a href="umpc/d7_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="umpc/d7/teardown.htm">
+&dash;
+<a href="umpc/d7_teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
