3DS Refined and added teardown images.

--- a/index.htm
+++ b/index.htm
@@ -5637,9 +5637,13 @@ Nintendo DSi</h3>
 Nintendo 3DS</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/3ds/review.htm">
-介紹</a><br>
+&dash;
+<a href="handheld/3ds_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="handheld/3ds_teardown.htm">
+拆機</a><br>
 
 &lowast;
 <a href="handheld/3ds/mod.htm">
