--- a/handheld/pyra_build_kernel.htm
+++ b/handheld/pyra_build_kernel.htm
@@ -20,7 +20,30 @@ $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make pyra_defconfig
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make all -j4
 </pre>
 <p>
-P.S. zImage、omap5-letux-cortex15-v5.3+pyra-v5.3.dtb
+P.S. zImage、omap5-letux-cortex15-v5.3+pyra-v5.3.dtb<br><br>
+
+推薦的U-Boot參數
 </p>
+<pre>
+arch=arm
+baudrate=115200
+board=pyra+lc15
+board_name=pyra+lc15
+bootcmd=fatload mmc 0 0x82000000 zImage;fatload mmc 0 0x88000000 dtb;bootz 0x82000000 - 0x88000000
+bootdelay=2
+cpu=armv7
+fdtfile=omap5-letux-cortex15-v5.3+pyra-v5.3.dtb
+fileaddr=88000000
+filesize=0
+mmcdev=0
+scsidevs=0
+soc=omap5
+stderr=serial
+stdin=serial
+stdout=serial
+usbethaddr=02:e1:18:13:12:70
+vendor=pandora
+ver=U-Boot 2016.11-g0fecbc0a98-dirty (Dec 24 2020 - 19:14:56 +0100)
+</pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
