3DS LL Refined and added teardown images.

--- a/index.htm
+++ b/index.htm
@@ -5739,12 +5739,16 @@ build devkitpro (CROSSBUILD=arm-linux-gnueabihf)</a><br>
 Nintendo 3DS LL</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/3dsll/review.htm">
-介紹</a><br>
+&dash;
+<a href="handheld/3dsll_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="handheld/3dsll/mod.htm">
+&dash;
+<a href="handheld/3dsll_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/3dsll_mod.htm">
 改造電池、充電接頭</a><br>
 <br><br><br><br>
 
