--- a/handheld/3dsll_spec.htm
+++ b/handheld/3dsll_spec.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Nintendo 3DS - <b>簡要規格</b></h3>
+<h3><a href="../index.htm">掌機</a> - Nintendo 3DS LL - <b>簡要規格</b></h3>
 <hr size="1"><br>
 <p>
 簡要規格
@@ -12,13 +12,13 @@
   <tr><th>CPU</th><td>ARM ARM1176JZ(F)-S 268MHz (x2) and ARM ARM9 67MHz</td></tr>
   <tr><th>GPU</th><td>DMP PICA200 268MHz</td></tr>
   <tr><th>MEMORY</th><td>128MB FCRAM, 6MB VRAM and 2GB Flash</td></tr>
-  <tr><th>DISPLAY</th><td>3.53" 400x240 and 3.02" 320x240 (Resistive)</td></tr>
+  <tr><th>DISPLAY</th><td>4.88" 400x240 and 4.18" 320x240 (Resistive)</td></tr>
   <tr><th>SLOT</th><td>Game Card and SD</td></tr>
   <tr><th>WIRELESS</th><td>Wi-Fi</td></tr>
   <tr><th>INPUT</th><td>GamePad and JoyStick</td></tr>
-  <tr><th>BATTERY</th><td>1300mA</td></tr>
-  <tr><th>DIMENSION</th><td>134mm x 74mm x 22mm</td></tr>
-  <tr><th>WEIGHT</th><td>235g</td></tr>
+  <tr><th>BATTERY</th><td>1750mA</td></tr>
+  <tr><th>DIMENSION</th><td>156mm x 93mm x 22mm</td></tr>
+  <tr><th>WEIGHT</th><td>336g</td></tr>
 </table>
 
 <br><script type="text/javascript" src="../tail.js"></script>
