Pandora Updated teardown page.

--- a/handheld/pandora_1ghz_teardown.htm
+++ b/handheld/pandora_1ghz_teardown.htm
@@ -5,26 +5,55 @@
 <h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - <b>拆機</b></h3>
 <hr size="1"><br>
 <p>
-PCB<br>
+正面<br>
 <img src="pandora_1ghz_teardown/1.jpg" class="maxSize"><br><br>
 
-WG7210-00、Atmel MU1241<br>
+下邊<br>
 <img src="pandora_1ghz_teardown/2.jpg" class="maxSize"><br><br>
 
-JW513、TPS65950A2<br>
+側邊<br>
 <img src="pandora_1ghz_teardown/3.jpg" class="maxSize"><br><br>
 
-WY245<br>
+上邊<br>
 <img src="pandora_1ghz_teardown/4.jpg" class="maxSize"><br><br>
 
-76216M、27KG4<br>
+側邊<br>
 <img src="pandora_1ghz_teardown/5.jpg" class="maxSize"><br><br>
 
-PCB<br>
+背面<br>
 <img src="pandora_1ghz_teardown/6.jpg" class="maxSize"><br><br>
 
+3.7v 4000mA<br>
+<img src="pandora_1ghz_teardown/7.jpg" class="maxSize"><br><br>
+
+拿掉電池<br>
+<img src="pandora_1ghz_teardown/8.jpg" class="maxSize"><br><br>
+
+背蓋<br>
+<img src="pandora_1ghz_teardown/9.jpg" class="maxSize"><br><br>
+
+PCB<br>
+<img src="pandora_1ghz_teardown/10.jpg" class="maxSize"><br>
+<img src="pandora_1ghz_teardown/11.jpg" class="maxSize"><br><br>
+
+BQ2750、SN74ALVC00、ATMEGA8L-MU、WG721000<br>
+<img src="pandora_1ghz_teardown/12.jpg" class="maxSize"><br><br>
+
+DM3730CBP100(9AA98 JW295)、TPS65950B、SN74AVC32T245、BC2046、ATMEGA8L-MU、SN74AVC8T245、PCM1773PWR、TPA6110A2DGNR<br>
+<img src="pandora_1ghz_teardown/13.jpg" class="maxSize"><br><br>
+
+正面<br>
+<img src="pandora_1ghz_teardown/14.jpg" class="maxSize"><br><br>
+
 鍵盤<br>
-<img src="pandora_1ghz_teardown/7.jpg" class="maxSize">
+<img src="pandora_1ghz_teardown/15.jpg" class="maxSize"><br>
+<img src="pandora_1ghz_teardown/16.jpg" class="maxSize"><br><br>
+
+按鍵<br>
+<img src="pandora_1ghz_teardown/17.jpg" class="maxSize"><br><br>
+
+FPC<br>
+<img src="pandora_1ghz_teardown/18.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
