Pandora UART modding.

--- a/index.htm
+++ b/index.htm
@@ -302,6 +302,10 @@ Pandora (1GHz)</h3>
 新屏</a><br>
 
 &dash;
+<a href="handheld/pandora_1ghz_uart_mod.htm">
+UART改造</a><br>
+
+&dash;
 <a href="handheld/pandora_1ghz_uart.htm">
 UART傳輸線</a><br>
 
