Pandora How to fix battery issue.

--- a/handheld/pandora_rebirth_fix_battery.htm
+++ b/handheld/pandora_rebirth_fix_battery.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - <b>如何固定電池</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - <b>如何固定電池</b></h3>
 <hr size="1"><br>
 <p>
 由於機構沒有設計好，因此，晃動時，機器會重新開機<br>
@@ -33,10 +33,10 @@ difference() {
 <img src="pandora_1ghz_fix_battery/5.jpg" class="maxSize"><br><br>
 
 支架位置<br>
-<img src="pandora_1ghz_fix_battery/6.jpg" class="maxSize"><br><br>
+<img src="pandora_rebirth_fix_battery/1.jpg" class="maxSize"><br><br>
 
 完美<br>
-<img src="pandora_1ghz_fix_battery/7.jpg" class="maxSize">
+<img src="pandora_rebirth_fix_battery/2.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
