--- a/index.htm
+++ b/index.htm
@@ -466,6 +466,10 @@ UART改造</a><br>
 <a href="handheld/pandora_rebirth_motor.htm">
 振動馬達改造</a><br>
 
+&dash;
+<a href="handheld/pandora_rebirth_fix_battery.htm">
+如何固定電池</a><br>
+
 &oplus;
 <b>Debian (Mark3)</b><br>
 
