--- a/handheld/pandora_classic_uart_mod.htm
+++ b/handheld/pandora_classic_uart_mod.htm
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - <b>UART改造</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (Classic) - <b>UART改造</b></h3>
 <hr size="1"><br>
 <p>
 這個特殊I/O最適合用來改造成UART<br>
-<img src="pandora_1ghz_uart_mod/1.jpg" class="maxSize"><br><br>
+<img src="pandora_classic_uart_mod/1.jpg" class="maxSize"><br><br>
 
 系統使用的Port是UART3(/dev/ttyO2)，因此，司徒使用的腳位是RX3、TX3<br>
-<img src="pandora_1ghz_uart_mod/2.jpg" class="maxSize"><br><br>
+<img src="pandora_classic_uart_mod/2.jpg" class="maxSize"><br><br>
 
 參考Pandora Rebirth腳位<br>
 <img src="pandora_rebirth_uart/7.jpg" class="maxSize"><br><br>
@@ -18,10 +18,10 @@
 <img src="pandora_rebirth_uart/9.jpg" class="maxSize"><br><br>
 
 跳線<br>
-<img src="pandora_1ghz_uart_mod/3.jpg" class="maxSize"><br><br>
+<img src="pandora_classic_uart_mod/3.jpg" class="maxSize"><br><br>
 
 完成<br>
-<img src="pandora_1ghz_uart_mod/4.jpg" class="maxSize">
+<img src="pandora_classic_uart_mod/4.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
