--- a/phone.htm
+++ b/phone.htm
@@ -144,60 +144,32 @@ Mugen Power 3.7V 2400mA電池</a><br>
     <a href="phone/n900_maemo_repo.htm">
     更新Repository</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/usbhost.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_usbhost.htm">
     切換USB Host模式</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/xterm_hotkey.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_xterm_hotkey.htm">
     X Terminal快速鍵</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/dummy_network.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_xterm_scrollback.htm">
+    X Terminal ScrollBar</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_dummy_network.htm">
     連接Dummy Network</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/mydocs_ext3.htm">
-    MyDocs格式化成ext3</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_mydocs_ext3.htm">
+    MyDocs格式化成Ext3</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/bwidget-1.9.14.htm">
-    安裝bwidget 1.9.14</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/xterm_scrollback.htm">
-    X Terminal Scrollback</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/run_i386_elf.htm">
-    run i386_elf executable</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/u-boot-update-bootmenu.htm">
-    u-boot-update-bootmenu.sh</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/play_freeciv.htm">
-    如何玩Freeciv</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/play_openttd.htm">
-    如何玩OpenTTD</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/play_bos_wars.htm">
-    如何玩Bos Wars</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/vibrator.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_vibration.htm">
     如何控制振動馬達</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/play_widelands.htm">
-    如何玩Widelands</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/battery.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_battery.htm">
     如何查看電池百分比</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
