--- a/phone.htm
+++ b/phone.htm
@@ -172,45 +172,17 @@ Mugen Power 3.7V 2400mA電池</a><br>
     <a href="phone/n900_maemo_battery.htm">
     如何查看電池百分比</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/play_asciiportal.htm">
-    如何玩ASCII Portal</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_root.htm">
+    解決Root空間不足的問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/play_starcraft-1.htm">
-    如何玩星海爭霸1(StarCaft I)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/play_warcraft-2.htm">
-    如何玩魔獸爭霸2(WarCaft II)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/pidgin_line.htm">
-    如何在Pidgin上使用LINE聊天軟體</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/pidgin_skype.htm">
-    如何在Pidgin上使用Skype聊天軟體</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/backupmenu_skip.htm">
-    如何在BackupMenu跳過某些備份資料夾</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/play_wesnoth.htm">
-    如何玩韋諾之戰(Battle of Wesnoth)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/unlimit_rootfs.htm">
-    解決root空間不足的問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_xterm.htm">
-    解決xterm文字斷行的問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_vnc_screen_off.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_vnc_screen_off.htm">
     解決VNC Screen Off問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/n900_maemo_fix_xterm.htm">
+    解決X Terminal文字斷行的問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/n900/maemo/fix_google_pinyin.htm">
