--- a/phone.htm
+++ b/phone.htm
@@ -174,135 +174,75 @@ Mugen Power 3.7V 2400mA電池</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_root.htm">
-    解決Root空間不足的問題</a><br>
+    解決Root空間不足問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_fix_vnc_screen_off.htm">
     解決VNC Screen Off問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_ttys2.htm">
+    解決/dev/ttyS2無法使用問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_fix_xterm.htm">
-    解決X Terminal文字斷行的問題</a><br>
+    解決X Terminal文字斷行問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_google_pinyin.htm">
-    解決Google Pinyin啟動問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_dtplite.htm">
+    解決dtplite not found問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_tracker.htm">
-    解決CPU Usage問題(tracker)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_ctrl_bksp.htm">
+    解決Ctrl+Backspace失效問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_ttys2.htm">
-    解決/dev/ttyS2無法使用的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_vim_backspace.htm">
+    解決Vim無法使用Backspace問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_vim-backspace.htm">
-    解決VIM無法使用Backspace的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_tracker.htm">
+    解決High CPU Usage問題(tracker)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_dtplite.htm">
-    解決"dtplite: not found"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_logfile.htm">
+    解決High CPU Usage問題(/usr/bin/Xorg -logfile)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_ctrl_bksp.htm">
-    解決Ctrl + Backspace失效的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_make_broken_pipe.htm">
+    解決Make(parser.h) broken pipe問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_make_broken_pipe.htm">
-    解決"make (parser.h) broken pipe"的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_psx4m_keys.htm">
+    解決PSX4M permission to keys file問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_logfile.htm">
-    解決CPU Usage問題(/usr/bin/Xorg -logfile)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_psx4m_touchscreen.htm">
+    解決PSX4M Could not open touchscreen問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_psx4m_keys.htm">
-    解決PSX4M"...permission to keys file"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_gnu89.htm">
+    解決Symbol pread64 is already defined問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_psx4m_touchscreen.htm">
-    解決PSX4M"Could not open touchscreen"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_sshd_key.htm">
+    解決sshd no hostkeys available exiting問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_gnu89.htm">
-    解決"symbol pread64 is already defined"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_xterm_color.htm">
+    解決Error opening terminal xterm-256color問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_sshd_key.htm">
-    解決"sshd: no hostkeys available exiting"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_bit_so.htm">
+    解決Dynasm/dasm_arm.lua:29: module bit not found問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_xterm-color.htm">
-    解決"Error opening terminal: xterm-256color"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_libstdcpp.htm">
+    解決/usr/libstdc++.so.6: version GLIBCXX_3.4.10 not found問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_bit.so.htm">
-    解決"dynasm/dasm_arm.lua:29: module bit not found"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_libstdcpp.htm">
-    解決"/usr/libstdc++.so.6: version GLIBCXX_3.4.10 not found"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/fix_utime.htm">
-    解決"uv__fs_utime: undefined reference to futimens、utimensat"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_as31.htm">
-    build as31</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_gputils.htm">
-    build gputils</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_pyserial.htm">
-    build pyserial</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_tk-8.5.8.htm">
-    build tk 8.5.8</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_bison-3.5.htm">
-    build bison 3.5</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_tcl-8.5.8.htm">
-    build tcl 8.5.8</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_itcl-3.4.1.htm">
-    build itcl 3.4.1</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_tdom-0.9.0.htm">
-    build tdom 0.9.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_stcgal-1.4.htm">
-    build stcgal 1.4</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_autocutsel.htm">
-    build autocutsel</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_tkimg-1.4.9.htm">
-    build tkimg 1.4.9</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_binutils-2.22.htm">
-    build binutils 2.22</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_setuptools-2.0.2.htm">
-    build setuptools 2.0.2</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/maemo/build_mcu8051ide-1.4.9.htm">
-    build mcu8051ide 1.4.9</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_utime.htm">
+    解決uv__fs_utime: undefined reference to futimens、utimensat問題</a><br>
 
 &oplus;
 <b>SBox</b><br>
