--- a/phone/n900_maemo_fix_ttys2.htm
+++ b/phone/n900_maemo_fix_ttys2.htm
@@ -1,60 +1,16 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../../header.js"></script>
-<div id="page">
-<h3>Nokia N900 &gt;&gt; Maemo</h3>
-<p><b>解決/dev/ttyS2無法使用的問題</b></p>
-<hr size="1">
+<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>解決/dev/ttyS2無法使用問題</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="https://lore.kernel.org/patchwork/patch/171865/">kernel_patch_171865</a><br><br>
+https://lore.kernel.org/patchwork/patch/171865/<br><br>
 
-雖然在Maemo系統下有USB Host功能可以使用，不過缺點則是UART(/dev/ttyS2)無法使用，而Native Debian系統下，則是UART(/dev/ttyO2)可以使用，但是USB Host無法使用，原因是驅動程式的問題，雖然司徒更喜愛Native Debian系統，畢竟可以直接使用Debian的套件，對於開發者來說，還是一大吸引特色，不過在Native Debian系統下，還是有很多不完善的地方，如：過於耗電(150mA, Idle)、USB Host無法使用、Camera無法使用、Display架構過於耗CPU資源，而最讓司徒頭痛就是耗電問題，因為150mA的耗電速度，大約是一小時10%(原廠電池)，因此，這讓司徒又重新安裝回Maemo系統(據說待機可以讓CPU運作於0Hz)，加上司徒目前已經可以解除root 256MB的容量限制，因此，司徒只要把Maemo的UART(/dev/ttyS2)問題解決後，基於Maemo系統的N900就可以成為一台真正實用的開發機器，而經過多次努力移植以及測試後，司徒發現其實只要修改一個小判斷就可以讓Maemo系統支援<b>/dev/ttyS2</b>，不需要重新移植OMAP UART驅動。<br><br>
+雖然在Maemo系統下有USB Host功能可以使用，不過缺點則是UART(/dev/ttyS2)無法使用，而Native Debian系統下，則是UART(/dev/ttyO2)可以使用，但是USB Host無法使用，原因是驅動程式的問題，雖然司徒更喜愛Native Debian系統，畢竟可以直接使用Debian的套件，不過在Native Debian系統下，還是有很多不完善的地方，如：過於耗電(150mA, Idle)、USB Host無法使用、Camera無法使用、Display架構過於耗CPU資源，而最讓司徒頭痛就是耗電問題，因為150mA的耗電速度，大約是一小時10%(原廠電池)，因此，這讓司徒又重新安裝回Maemo系統，加上司徒目前已經可以解決Root 256MB的容量限制，因此，司徒只要把Maemo的UART(/dev/ttyS2)問題解決後，基於Maemo系統的N900就可以成為一台真正好用的開發機器，而經過多次努力移植以及測試後，司徒發現其實只要修改一個小判斷就可以讓Maemo系統支援<b>/dev/ttyS2</b>，不需要重新移植OMAP UART驅動<br><br>
 
-司徒一開始使用Patch方式添加，發現只有兩個地方需要修改<b>arch/arm/mach-omap2/serial.c</b>以及<b>drivers/omap-serial.c</b>，雖然有一些redefine問題，不過手動修復後，tty依然沒有添加新的<b>/dev/ttyOx</b>，於是司徒往回翻舊版Kernel，發現omap-serial.c是在Kernel 2.6.37新增，於是直接使用2.6.37 omap-serial.c，結果還是無法使用，於是開始找問題，發現omap-serial.c的probe()沒有被呼叫，於是查看<b>arch/arm/mach-omap2/serial.c</b>的添加是否有問題
+司徒一開始使用Patch方式添加，發現只有兩個地方需要修改，分別是<b>arch/arm/mach-omap2/serial.c、drivers/omap-serial.c</b>，雖然有一些Redefine問題，不過手動修復後，TTY依然沒有被添加，於是司徒往回翻舊版Kernel，發現omap-serial.c是在Kernel 2.6.37新增，於是直接使用2.6.37 omap-serial.c，結果還是無法使用，後來發現omap-serial.c的probe()沒有被呼叫，於是查看<b>arch/arm/mach-omap2/serial.c</b>的添加是否有問題
 </p>
 <pre class="brush:cpp">
 void __init omap_serial_init(void)
@@ -83,9 +39,9 @@ void __init omap_serial_init(void)
       p-&gt;mapbase = 0;
       continue;
     }
-</pre>
+</pre><br>
 <p>
-info->enabled_uarts拿到的uart flag都是disabled，於是往回找omap_get_config()
+info-&gt;enabled_uarts拿到的uart flag都是disabled，於是往回找omap_get_config()
 </p>
 <pre class="brush:cpp">
 const void *__omap_get_config(u16 tag, size_t len, int nr)
@@ -248,28 +204,21 @@ static const void *get_config(u16 tag, size_t len, int skip, size_t *len_out)
     return NULL;
   return kinfo-&gt;data;
 }
-</pre>
+</pre><br>
+
 <p>
 重新編譯zImage後，就可以使用/dev/ttyS2
 </p>
 <pre>
 $ dmesg | grep serial
-  [65435.071594] serial8250.0: ttyS0 at MMIO 0x4806a000 (irq = 72) is a ST16654
-  [65435.092071] serial8250.0: ttyS1 at MMIO 0x4806c000 (irq = 73) is a ST16654
-  [65435.112548] serial8250.0: ttyS2 at MMIO 0x49020000 (irq = 74) is a ST16654 
+    [65435.071594] serial8250.0: ttyS0 at MMIO 0x4806a000 (irq = 72) is a ST16654
+    [65435.092071] serial8250.0: ttyS1 at MMIO 0x4806c000 (irq = 73) is a ST16654
+    [65435.112548] serial8250.0: ttyS2 at MMIO 0x49020000 (irq = 74) is a ST16654 
 </pre><br>
 
 <br>
 感動<br>
-<img src="fix_ttys2/1.jpg" class="maxSize">
+<img src="n900_maemo_fix_ttys2/1.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../../phone.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
