--- a/phone.htm
+++ b/phone.htm
@@ -271,65 +271,25 @@ Mugen Power 3.7V 2400mA電池</a><br>
 &oplus;
 <b>Easy Debian</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/setup_debian5.htm">
-    架設環境(Debian 5)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_setup_debian5.htm">
+    安裝系統(Debian 5)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/setup_debian6.htm">
-    架設環境(Debian 6)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_setup_debian6.htm">
+    安裝系統(Debian 6)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/setup_debian7.htm">
-    架設環境(Debian 7)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_setup_debian7.htm">
+    安裝系統(Debian 7)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/setup_debian8.htm">
-    架設環境(Debian 8)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_patch_openscad.htm">
+    Patch OpenSCAD</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/port_qemu-2.4.0.1.htm">
-    移植qemu 2.4.0.1</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/build_qemu-2.4.0.1.htm">
-    build qemu 2.4.0.1</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/easydebian_cli.htm">
-    分析Easy Debian(CLI)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/easydebian_lxde.htm">
-    分析Easy Debian(LXDE)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/build_mipsel_toolchain.htm">
-    build mipsel toolchain</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/reverse_qobi_wmhint_fix.htm">
-    reverse qobi-wmhint-fix</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/patch_openscad-20120526.htm">
-    patch openscad 2012.05.26</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/pidgin_line.htm">
-    如何在Pidgin上使用LINE聊天軟體</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/pidgin_skype.htm">
-    如何在Pidgin上使用Skype聊天軟體</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/fix_freecad_opengl.htm">
-    解決"freecad: this system does not support opengl"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/debian/fix_mcu8051ide.htm">
-    解決"mcu8051ide: invalid character ] ... CLI_next_arg ..."問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_fix_freecad_opengl.htm">
+    解決FreeCAD this system does not support opengl問題</a><br>
 
 &oplus;
 <b>Native Kali</b><br>
