--- a/phone.htm
+++ b/phone.htm
@@ -294,17 +294,13 @@ Mugen Power 3.7V 2400mA電池</a><br>
 &oplus;
 <b>Native Kali</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/kali/setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_kali_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/kali/nand_boot.htm">
-    如何從內部NAND開機</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/kali/build_kernel.htm">
-    build kernel 5.3.0</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_kali_nand_boot.htm">
+    如何從Flash開機</a><br>
 
 &oplus;
 <b>Native Debian</b><br>
