--- a/phone.htm
+++ b/phone.htm
@@ -292,7 +292,7 @@ Mugen Power 3.7V 2400mA電池</a><br>
     解決FreeCAD this system does not support opengl問題</a><br>
 
 &oplus;
-<b>Native Kali</b><br>
+<b>Kali</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_kali_setup.htm">
@@ -303,81 +303,27 @@ Mugen Power 3.7V 2400mA電池</a><br>
     如何從Flash開機</a><br>
 
 &oplus;
-<b>Native Debian</b><br>
+<b>Debian</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/native/setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/n900/native/battery_calibration.htm">
-    battery calibration</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_suspend_log.htm">
+    如何輸出Suspend訊息</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Kernel 4.9.0<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_battery_calibration.htm">
+    Battery Calibration</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/overclock.htm">
-        如何調整CPU最高頻率</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_build_kernel_4_9_0.htm">
+    Build Kernel 4.9.0</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/build_kernel.htm">
-        build kernel 4.9.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Kernel 5.3.0<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/dmesg.htm">
-        開機Log</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/show_battery.htm">
-        自製電池顯示</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/set_lcd.htm">
-        設定螢幕背光</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/set_kb.htm">
-        設定鍵盤背光</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/set_audio.htm">
-        設定聲音配置</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/postmarketos/uart.htm">
-        使用UART傳輸</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/trayicon.htm">
-        自製設定Trayicon</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/disable_charge_led.htm">
-        關閉硬體充電指示燈</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/usb_boost.htm">
-        如何輸出VBUS電源</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/mount_mtd.htm">
-        如何掛載MTD根目錄</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/oc.htm">
-        如何調整CPU最高頻率</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/suspend_log.htm">
-        如何輸出Suspend訊息</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/n900/native/build_kernel-5.3.0.htm">
-        build kernel 5.3.0</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_debian_build_kernel_5_3_0.htm">
+    Build Kernel 5.3.0</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="phone/n900/native/mount_sd.htm">
