--- a/phone/n900_debian_suspend_log.htm
+++ b/phone/n900_debian_suspend_log.htm
@@ -1,65 +1,20 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../../header.js"></script>
-<div id="page">
-<h3>Nokia N900 &gt;&gt; Native Debian &gt;&gt; Kernel 5.3.0</h3>
-<p><b>如何輸出Suspend訊息</b></p>
-<hr size="1">
+<h3><a href="../phone.htm">手機</a> - N900 - Debian - <b>如何輸出Suspend訊息</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="https://blog.csdn.net/jacobywu/article/details/24735521">jacobywu</a><br><br>
+https://blog.csdn.net/jacobywu/article/details/24735521<br><br>
 
-bootmenu (加上initcall_debug no_console_suspend)
+Bootmenu
 </p>
 <pre>
-...
 ITEM_CMDLINE="root=/dev/mmcblk1p2 rootwait vram=12M console=tty0 console=ttyO2 initcall_debug no_console_suspend"
-</pre>
-<p>
-P.S. CMDLINE訊息是由bootmenu傳入，並非Kernel .config描述的CMDLINE資訊。<br><br>
+</pre><br>
 
+<p>
 Baudrate 115200bps
 </p>
 <pre>
@@ -536,14 +491,6 @@ Baudrate 115200bps
 [   95.601348] PM: Calling irq_gc_suspend+0x0/0x70
 [   95.601348] PM: Calling fw_suspend+0x0/0x14
 [   95.601348] PM: Calling cpu_pm_suspend+0x0/0x18
-</pre><br>
+</pre>
 
-<p>
-<br><a href="../../../phone.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
